modified:   index.html   Name tag changed from p to h1 to fix accessibility issue modified:   styles.css   Counters realignment

--- a/styles.css
+++ b/styles.css
@@ -84,11 +84,12 @@ main {
   background-repeat: no-repeat;
 }
 
-.card p:nth-child(2) {
+.card h1 {
   margin-top: 1.1rem;
   font-weight: 700;
+  font-size: 1rem;
 }
-.card p:nth-child(2) span {
+.card h1 span {
   font-weight: 400;
   color: var(--color-neutral);
 }
@@ -112,7 +113,7 @@ main {
 .profile-counters {
   border-top: 0.1px solid hsla(0, 0%, 59%, .3);
   display: flex;
-  padding: 1.3rem 1.8rem;
+  padding: 1.3rem 1.3rem;
   justify-content: space-around;
   
 }
